src/objects/ShohinShizaiM__c.object
<CustomObject>
    <fields>
        <fullName>AccountTankaMHuyouFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェック有り　で　本商品は取引先単価マスタを持たない取引先でも受注登録可能と成ります。
通常は備品などをチェック有りにします。</inlineHelpText>
        <label>取引先条件不要フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaiRitsuCS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>数量倍率C/S</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaiRitsuCT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>数量倍率C/T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HachuSuryoCTAuto__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>発注明細登録時にカートン数を自動的に設定する。</inlineHelpText>
        <label>発注カートン自動入力</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hachusaki__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>標準の仕入先を商品別に固定する場合に指定。
例）一括発注作成時の仕入先設定の自動化（予定）。</inlineHelpText>
        <label>標準仕入先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>商品資材マスタ（発注先）</relationshipLabel>
        <relationshipName>ShohinShizaiM_Hachusaki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HanbaiKanriKigenNissu__c</fullName>
        <inlineHelpText>出荷時に標準で担保される消費期限日数の残り日数。
消費期限日数　の　30%　が標準値。</inlineHelpText>
        <label>販売期限日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HatchuJidoNyuko__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>発注確定時に在庫データを自動的に入庫させる場合ON。
例：発注数量と入庫数量が食い違うことのない商品資材など。</inlineHelpText>
        <label>発注自動入庫</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HikiateMachiALLSuryo__c</fullName>
        <inlineHelpText>優先引当先（倉庫）に存在する、有効な入出庫データの数量の合計。
出荷引当を行うことができる全ユニットの合計値。</inlineHelpText>
        <label>引当可能混ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateKanoFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HikiateMachiSaiChoHambaiKigenALLSuryo__c</fullName>
        <label>引当可能最長販売期限混ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateKanoFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ZaikoData__c.SaidaiShomiKigenFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HikiateMachiSaiChoHambaiKigenTanSuryo__c</fullName>
        <label>引当可能最長販売期限単ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateKanoFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ZaikoData__c.SaidaiShomiKigenFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HikiateMachiTanSuryo__c</fullName>
        <inlineHelpText>優先引当先（倉庫）に存在する、有効な入出庫データの数量。
出荷引当を行うことができる単ユニット（単一入出庫レコード）の最大値。</inlineHelpText>
        <label>引当可能単ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateKanoFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HyojunALLSuryo__c</fullName>
        <inlineHelpText>引当可能フラグ＝TRUEの全ての在庫データの在庫数量の合計。
受注引当実行時に「ロット混在フラグ＝TRUE」の場合に引当可能な最大数。</inlineHelpText>
        <label>標準混ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateMachiFlg__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HyojunArariGaku__c</fullName>
        <formula>HyojunBaika__c  -  HyojunGenka__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>標準売価　-　標準原価</inlineHelpText>
        <label>標準粗利額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HyojunArariRitsu__c</fullName>
        <formula>HyojunArariGaku__c  /  HyojunBaika__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>標準粗利額　/　標準売価</inlineHelpText>
        <label>標準粗利率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HyojunBaika__c</fullName>
        <inlineHelpText>取引先条件マスタが存在しない場合に採用される商品の販売単価。</inlineHelpText>
        <label>標準売価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HyojunGenka__c</fullName>
        <inlineHelpText>原価計算のための単価</inlineHelpText>
        <label>標準原価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HyojunTanSuryo__c</fullName>
        <inlineHelpText>引当可能フラグ＝TRUEの在庫データのなかで最大数（MAX）を持つ在庫データの在庫数量。
受注引当実行時に「ロット混在フラグ＝FALES」の場合に引当可能な最大数。</inlineHelpText>
        <label>標準単ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateMachiFlg__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JanCode__c</fullName>
        <externalId>true</externalId>
        <label>ＪＡＮコード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JissekiHaneiNensu__c</fullName>
        <inlineHelpText>受注実績などの元日付に対して何年分シフトさせるかの年数。
例：前年同日＝１
例：一昨年同日＝２</inlineHelpText>
        <label>実績反映年数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JissekiHaneiNissu__c</fullName>
        <inlineHelpText>受注実績などの元日付に対して何日分シフトさせるかの日数。
例：前週同曜日＝７
例：前日＝１</inlineHelpText>
        <label>実績反映日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JissekiHaneiTsukisu__c</fullName>
        <inlineHelpText>受注実績などの元日付に対して何ヶ月分シフトさせるかの月数。
例：前月同日＝１
例：前四半期同日＝３</inlineHelpText>
        <label>実績反映月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JuchuKesuJido__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>受注明細登録時にケース数を自動的に設定する。</inlineHelpText>
        <label>受注ケース自動入力</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeppinKeikokuFeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>安全在庫警告フィード</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeppinKeikokuSeisanchukomiYotei__c</fullName>
        <formula>YosokuTaishoSuryoYotei__c  -  YosokuKikannaiShohisu__c  &lt;  KeppinShikiichi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>安全在庫警告（予定込）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeppinKeikokuYoteiFeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>安全在庫警告フィード（予定込）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeppinKeikoku__c</fullName>
        <formula>YosokuTaishoSuryo__c -  YosokuKikannaiShohisu__c   &lt;  KeppinShikiichi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>安全在庫警告</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeppinShikiichi__c</fullName>
        <inlineHelpText>在庫の数量が閾値を割りこんだ場合にアラートされます。
例：安全在庫数
例：生産ロット数
例：仕入最小単位数</inlineHelpText>
        <label>安全在庫閾値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kikaku__c</fullName>
        <description>カクテルの商品名２がこれにあたる</description>
        <inlineHelpText>カクテルの商品名２がこれにあたる</inlineHelpText>
        <label>規格</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KinkyuShiireFlg__c</fullName>
        <formula>HyojunALLSuryo__c  -  YosokuKikannaiShohisu__c  &lt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>現在出荷可能な在庫では既に出荷見込の数量を支えきれない事を表す。

標準混ユニット数量　-　予測対象消費数量　＜　0　の場合ON。</inlineHelpText>
        <label>緊急仕入フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeisaiChofukuKyokaFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>受注明細データへの商品資材マスタ登録時に重複排除を行わない場合ON。
重複が許可されるが引当を行うことは出来ないため、受注明細データの引当無はONが設定される。

例）明細を書換えて使用する汎用商品。
例）繰り返し販売することが予め分かっている商品。</inlineHelpText>
        <label>明細重複許可フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Naiyoryo__c</fullName>
        <inlineHelpText>発注書出力時に記載される入数。
例：10枚入り</inlineHelpText>
        <label>内容量</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NyukaLeadTime__c</fullName>
        <label>入荷リードタイム日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SaiChoHambaiKigenALLSuryo__c</fullName>
        <label>最長販売期限混ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.SaidaiShomiKigenFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateMachiFlg__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SaiChoHambaiKigenHizuke__c</fullName>
        <label>最長販売期限日付</label>
        <summarizedField>ZaikoData__c.HambaiKigenBiNamachi__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateMachiFlg__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SaiChoHambaiKigenTanSuryo__c</fullName>
        <label>最長販売期限単ユニット数量</label>
        <summarizedField>ZaikoData__c.ZaikoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.SaidaiShomiKigenFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ZaikoData__c.HikiateMachiFlg__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ShohiKigenChokaHizuke__c</fullName>
        <inlineHelpText>消費期限を超過した日付で納品が必要となっている消費期限日。
新たな商品の入荷時に必要な消費期限日。</inlineHelpText>
        <label>消費期限超過受注日付</label>
        <summarizedField>JuchuMeisaiData__c.ShomiKigenShokaiNamachi__c</summarizedField>
        <summaryFilterItems>
            <field>JuchuMeisaiData__c.ZaikoNashiNohimbiNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>JuchuMeisaiData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ShohiKigenChokaSuryo__c</fullName>
        <inlineHelpText>消費期限を超過した日付で納品が必要となっている数量。
新たな商品の入荷が必要な数量。</inlineHelpText>
        <label>消費期限超過受注数量</label>
        <summarizedField>JuchuMeisaiData__c.JuchuSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>JuchuMeisaiData__c.ZaikoNashiNohimbiNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>JuchuMeisaiData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ShohiKigenJidoFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>在庫データの作成時に自動的に消費期限を代入する場合ON。
例：自社製造品：OFF
例：仕入品：ON</inlineHelpText>
        <label>消費期限自動入力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiCode__c</fullName>
        <externalId>true</externalId>
        <label>商品資材コード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiHyojunMei__c</fullName>
        <label>商品資材標準名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiKubun__c</fullName>
        <label>商品資材区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>完成品_自社</fullName>
                </value>
                <value>
                    <fullName>完成品_仕入</fullName>
                </value>
                <value>
                    <fullName>半製品_自社</fullName>
                </value>
                <value>
                    <fullName>半製品_仕入</fullName>
                </value>
                <value>
                    <fullName>原料</fullName>
                </value>
                <value>
                    <fullName>資材</fullName>
                </value>
                <value>
                    <fullName>経費</fullName>
                </value>
                <value>
                    <fullName>工程</fullName>
                </value>
                <value>
                    <fullName>製造ライン</fullName>
                </value>
                <value>
                    <fullName>技能者</fullName>
                </value>
                <value>
                    <fullName>機械</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShohinShizaimeiHyoji__c</fullName>
        <formula>Name</formula>
        <label>商品資材名表示</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shohizeiritsu__c</fullName>
        <defaultValue>$Setup.SystemParam__c.Shohizeiritsu__c</defaultValue>
        <inlineHelpText>ここに値が入っている場合、各トランザクションデータの消費税率の初期値はこの値となる。</inlineHelpText>
        <label>消費税率</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShomiKigenNissu__c</fullName>
        <inlineHelpText>製品が製造完了後に正常に消費（使用)出来る期間。
例：食品であれば賞味期限など。
例：機械部品であれば保証期間など。</inlineHelpText>
        <label>消費期限日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShubaiFlg__c</fullName>
        <formula>IF(OR(ISBLANK(Shubaibi__c), ISNULL(Shubaibi__c)), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_終売フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shubaibi__c</fullName>
        <inlineHelpText>取引先条件マスタを終売日に自動的に無効化する場合に入力。
商品の販売が終了する日付を入力。</inlineHelpText>
        <label>終売日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaniCS__c</fullName>
        <label>単位C/S</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaniCT__c</fullName>
        <label>単位C/T</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaniPC__c</fullName>
        <label>単位PC</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YosokuKeisu__c</fullName>
        <defaultValue>1.0</defaultValue>
        <inlineHelpText>前年同月同日の受注数量に対する予測値の係数です。
例：前年よりも売行好調1.05。
例：前年よりも売行不調0.95。</inlineHelpText>
        <label>予測係数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YosokuKikannaiShohisu__c</fullName>
        <label>予測対象消費数量</label>
        <summarizedField>ShukaMikomiData__c.ShohisuNamachi__c</summarizedField>
        <summaryFilterItems>
            <field>ShukaMikomiData__c.YosokuTaishoFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ShukaMikomiData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YosokuNisu__c</fullName>
        <inlineHelpText>本日を除く明日以降の何日間分を欠品発生の予測期間とするかを表す日数です。
例：入荷や生産のリードタイム＋１日。</inlineHelpText>
        <label>予測日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoFusokuSuryoYotei__c</fullName>
        <formula>IF (YosokuTaishoSuryoYotei__c  -   YosokuKikannaiShohisu__c -  KeppinShikiichi__c &gt; 0,
 0,
 YosokuTaishoSuryoYotei__c  -   YosokuKikannaiShohisu__c -  KeppinShikiichi__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>安全在庫不足数量（予定込）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoFusokuSuryo__c</fullName>
        <formula>IF (YosokuTaishoSuryo__c  -   YosokuKikannaiShohisu__c -  KeppinShikiichi__c &gt; 0,
 0,
 YosokuTaishoSuryo__c  -   YosokuKikannaiShohisu__c -  KeppinShikiichi__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>安全在庫不足数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoKara__c</fullName>
        <formula>TODAY()  +  1</formula>
        <inlineHelpText>明日（本日日付＋1日）</inlineHelpText>
        <label>予測対象期間から</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoMade__c</fullName>
        <formula>YosokuTaishoKara__c  +  YosokuNisu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>予測対象期間から　＋　予測日数</inlineHelpText>
        <label>予測対象期間まで</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoSuryoYotei__c</fullName>
        <label>予測対象在庫数量（予定込）</label>
        <summarizedField>ZaikoData__c.YosokuTaishoSuryo__c</summarizedField>
        <summaryFilterItems>
            <field>ZaikoData__c.YosokuTaisyoFlgNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ZaikoData__c.ShohinShizaiM__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoSuryo__c</fullName>
        <formula>HyojunALLSuryo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>標準混ユニット数量</inlineHelpText>
        <label>予測対象在庫数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YukoZaikoYotei__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予定入庫フラグONの入出庫データは確実な入庫が保証される場合OK。
最長販売期限日付に影響有り。
引当処理の検索対象に影響有り。
例）物品ではなくライセンスなどの無形商品。
例）仕入直送など入庫予定数量や入庫日を無視できる商品。</inlineHelpText>
        <label>予定入庫保証</label>
        <type>Checkbox</type>
    </fields>
    <label>商品資材マスタ</label>
    <listViews>
        <fullName>AvailableAll</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <columns>ShohiKigenChokaSuryo__c</columns>
        <columns>ShohiKigenChokaHizuke__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>全有効商品</label>
    </listViews>
    <listViews>
        <fullName>View20150911a</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>contains</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>notContain</operation>
            <value>7,8,9,2,4,5,6</value>
        </filters>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>．セット商品①</label>
    </listViews>
    <listViews>
        <fullName>View20150911b</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>contains</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>notContain</operation>
            <value>7,8,9,4,5,6,3</value>
        </filters>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>．セット商品②</label>
    </listViews>
    <listViews>
        <fullName>View20150911c</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>contains</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>notContain</operation>
            <value>7,8,9,2,1</value>
        </filters>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>．セット商品③</label>
    </listViews>
    <listViews>
        <fullName>View20150911d</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>contains</operation>
            <value>2,4</value>
        </filters>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>notContain</operation>
            <value>7,8,9,4,5,6,1</value>
        </filters>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>．セット商品④</label>
    </listViews>
    <listViews>
        <fullName>View20150911e</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>contains</operation>
            <value>5</value>
        </filters>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>notContain</operation>
            <value>7,8,9,2,4</value>
        </filters>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>．セット商品⑤</label>
    </listViews>
    <listViews>
        <fullName>View20150911f</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>contains</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>notContain</operation>
            <value>,7,8,9,2</value>
        </filters>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>．セット商品⑥</label>
    </listViews>
    <listViews>
        <fullName>View20150911g</fullName>
        <columns>ShohinShizaimeiHyoji__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HikiateMachiALLSuryo__c</columns>
        <columns>HikiateMachiTanSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>contains</operation>
            <value>7</value>
        </filters>
        <filters>
            <field>ShohinShizaiCode__c</field>
            <operation>notContain</operation>
            <value>4,5,3</value>
        </filters>
        <filters>
            <field>Shubaibi__c</field>
            <operation>equals</operation>
        </filters>
        <label>．セット商品⑦</label>
    </listViews>
    <listViews>
        <fullName>View20151024a</fullName>
        <columns>NAME</columns>
        <columns>TaniPC__c</columns>
        <columns>TaniCS__c</columns>
        <columns>BaiRitsuCS__c</columns>
        <columns>TaniCT__c</columns>
        <columns>BaiRitsuCT__c</columns>
        <filterScope>Everything</filterScope>
        <label>．自動化フラグ設定（単位）</label>
    </listViews>
    <listViews>
        <fullName>View20151024b</fullName>
        <columns>NAME</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>AccountTankaMHuyouFlg__c</columns>
        <columns>JuchuKesuJido__c</columns>
        <columns>ShomiKigenNissu__c</columns>
        <columns>HanbaiKanriKigenNissu__c</columns>
        <columns>Shubaibi__c</columns>
        <columns>HyojunBaika__c</columns>
        <columns>Shohizeiritsu__c</columns>
        <filterScope>Everything</filterScope>
        <label>．自動化フラグ設定（受注出荷）</label>
    </listViews>
    <listViews>
        <fullName>View20151024c</fullName>
        <columns>NAME</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>HyojunGenka__c</columns>
        <columns>HyojunBaika__c</columns>
        <columns>ShomiKigenNissu__c</columns>
        <columns>ShohiKigenJidoFlg__c</columns>
        <columns>NyukaLeadTime__c</columns>
        <columns>HachuSuryoCTAuto__c</columns>
        <columns>HatchuJidoNyuko__c</columns>
        <columns>YukoZaikoYotei__c</columns>
        <filterScope>Everything</filterScope>
        <label>．自動化フラグ設定（購買支払）</label>
    </listViews>
    <listViews>
        <fullName>View20151024d</fullName>
        <columns>NAME</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>NyukaLeadTime__c</columns>
        <columns>YosokuNisu__c</columns>
        <columns>JissekiHaneiNissu__c</columns>
        <columns>JissekiHaneiTsukisu__c</columns>
        <columns>JissekiHaneiNensu__c</columns>
        <columns>YosokuKeisu__c</columns>
        <columns>KeppinShikiichi__c</columns>
        <filterScope>Everything</filterScope>
        <label>．自動化フラグ設定（安全在庫警告）</label>
    </listViews>
    <listViews>
        <fullName>View20151024e</fullName>
        <columns>NAME</columns>
        <columns>HyojunTanSuryo__c</columns>
        <columns>HyojunALLSuryo__c</columns>
        <columns>SaiChoHambaiKigenHizuke__c</columns>
        <columns>SaiChoHambaiKigenTanSuryo__c</columns>
        <columns>SaiChoHambaiKigenALLSuryo__c</columns>
        <filterScope>Everything</filterScope>
        <label>．状態確認（部品推移）</label>
    </listViews>
    <listViews>
        <fullName>View20170424a</fullName>
        <columns>NAME</columns>
        <columns>YosokuKikannaiShohisu__c</columns>
        <columns>YosokuTaishoKara__c</columns>
        <columns>YosokuTaishoMade__c</columns>
        <columns>YosokuTaishoFusokuSuryo__c</columns>
        <columns>YosokuTaishoFusokuSuryoYotei__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeppinKeikoku__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>．状態確認（安全在庫警告）</label>
    </listViews>
    <listViews>
        <fullName>View20170425a</fullName>
        <columns>NAME</columns>
        <columns>ShohiKigenChokaSuryo__c</columns>
        <columns>ShohiKigenChokaHizuke__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShohiKigenChokaSuryo__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>．状態確認（消費期限超過受注）</label>
    </listViews>
    <nameField>
        <label>商品資材名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>